examples/napi/tests/build_error_tests/tsfn_raw_api_2.rs
use napi::threadsafe_function::ThreadsafeFunctionHandle;

fn construct_raw_handle(raw: napi::sys::napi_threadsafe_function) {
  let handle = ThreadsafeFunctionHandle::new(raw);
  handle.set_raw(raw);
}

fn main() {}
